# Fakenewsify

./: README.md  main.py  model.py  pyproject.toml
static/css/: style.css
static/js/: script.js
templates/: about.html  base.html  feed.html  index.html  trends.html
